--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/base": "^5.0.0-alpha.116",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.7",
+    "@mui/x-data-grid": "^5.17.22",
     "@reduxjs/toolkit": "^1.9.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
