--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mui/material": "^5.11.7",
     "@mui/x-data-grid": "^5.17.22",
     "@mui/x-data-grid-premium": "^5.17.22",
+    "@mui/x-date-pickers": "^5.0.18",
     "@reduxjs/toolkit": "^1.9.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -18,6 +19,7 @@
     "axios": "^1.3.2",
     "highcharts": "^10.3.3",
     "highcharts-react-official": "^3.1.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
