--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -7,7 +7,7 @@ COPY ./yarn.lock /app/
 RUN yarn config set "strict-ssl" false -g
 RUN yarn
 COPY . /app
-RUN yarn build
+RUN yarn build:prod
 
 # stage 2 - build the final image and copy the react build files
 FROM nginx:1.23.3-alpine
