--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "axios": "^1.3.2",
+    "env-cmd": "^10.1.0",
     "highcharts": "^10.3.3",
     "highcharts-react-official": "^3.1.0",
     "moment": "^2.29.4",
@@ -32,7 +33,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start:prod": "env-cmd -f prod.env yarn start",
+    "build:prod": "env-cmd -f prod.env yarn run build"
   },
   "eslintConfig": {
     "extends": [
