--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 REACT_APP_ENV="DEVELOPMENT"
 REACT_APP_BASE_URL=10.1.3.109:8000
+
+REACT_APP_FAVICON192=logo192_dev.png
+REACT_APP_FAVICON512=logo512_dev.png
+REACT_APP_FAVICONICO=favicon_dev.ico
+REACT_APP_TITLE="DEV Кабинет"
