--- a/prod.env
+++ b/prod.env
@@ -1,2 +1,7 @@
 REACT_APP_ENV="PRODUCTION"
 REACT_APP_BASE_URL=10.1.3.109:8000
+
+REACT_APP_FAVICON192=logo192.png
+REACT_APP_FAVICON512=logo512.png
+REACT_APP_FAVICONICO=favicon.ico
+REACT_APP_TITLE="PROD Кабинет"
