--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mui/x-data-grid-premium": "^5.17.22",
     "@mui/x-date-pickers": "^5.0.18",
     "@reduxjs/toolkit": "^1.9.2",
+    "@tasoskakour/react-use-oauth2": "^1.0.14",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
