--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 REACT_APP_ENV="DEVELOPMENT"
 REACT_APP_BASE_URL=10.1.3.109:8000
+REACT_APP_BASE_ESIA_URL=10.1.3.109:8765
 
 REACT_APP_FAVICON192=logo192_dev.png
 REACT_APP_FAVICON512=logo512_dev.png
