--- a/prod.env
+++ b/prod.env
@@ -1,5 +1,6 @@
 REACT_APP_ENV="PRODUCTION"
-REACT_APP_BASE_URL=10.1.3.109:8000
+REACT_APP_BASE_URL=10.1.3.215:8008
+REACT_APP_BASE_ESIA_URL=10.1.3.215:8765
 
 REACT_APP_FAVICON192=logo192.png
 REACT_APP_FAVICON512=logo512.png
